Fixes the behavior of Modify button on smaller screens. Changes a lot of file permission in order to work with the new setup of xampp

--- a/deploy/prenota-gestori/static/css/style.css
+++ b/deploy/prenota-gestori/static/css/style.css
@@ -218,7 +218,14 @@ html {
     top:20px;
     right:15px;
 }
-
+@media (max-width : 800px){
+    .modify-btn{
+        position: relative;
+        top: auto;
+        right: auto;
+        display: block;
+    }
+}
 
 footer {
     position: absolute;
@@ -238,7 +245,7 @@ footer {
 }
 .btn{
     margin-right:5px;
-    margin-left:5px;
+    margin-left:5px;    
 }
 .btn-erasedb{
   margin:10px;
